# threecrate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.7.0.md  ROADMAP.md  justfile  threecrate-umbrella.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  python_binding_request.md
.github/workflows/: crates-publish.yml  python.yml  rust.yml
3DCrate/: output.ply
docs/: benchmarks.md  crates.md  examples.md  installation.md
examples/: Cargo.toml  basic_usage.rs  bevy_conversion_demo.rs  bevy_mesh_conversion.rs  bevy_mesh_viewer.rs  comprehensive_gpu_example.rs  e57_io.rs  euclidean_cluster_example.rs  global_registration.rs  gpu_example.rs  gpu_filtering_example.rs  gpu_mesh_render_example.rs  gpu_segmentation_example.rs  interactive_viewer_example.rs  k_nearest_neighbors_example.rs  las_laz_example.rs  mesh_boolean_example.rs  mesh_serialization_example.rs  mesh_smoothing_example.rs  mmap_example.rs  ndt_registration.rs  normal_estimation_example.rs  pbr_visualization.rs  point_cloud_colorization_example.rs  ransac_plane_example.rs  read_obj.rs  read_ply.rs  realtime_pipeline.rs  shot_features.rs  simd_distance_example.rs  statistical_outlier_benchmark.rs  stream_read.rs  streaming_benchmark.rs  streaming_pipeline.rs  test_marching_cubes.rs  threecrate_dataset_bench.rs  write_obj.rs  write_ply.rs  xyz_csv_example.rs
scripts/: bench_cross_library.py  capture_screenshots.sh  publish-if-needed.sh  release.ps1
scripts/pcl_bench/: CMakeLists.txt  Dockerfile  pcl_bench.cpp
src/: lib.rs
threecrate-algorithms/: Cargo.toml  README.md
threecrate-algorithms/benches/: fpfh.rs  shot.rs
threecrate-algorithms/src/: colorization.rs  features.rs  filtering.rs  gicp.rs  global_registration.rs  ground_segmentation.rs  kiss_icp.rs  lib.rs  mesh_boolean.rs  mesh_smoothing.rs  ndt_registration.rs  nearest_neighbor.rs  normals.rs  point_cloud_ops.rs  registration.rs  segmentation.rs  simd_distance.rs  streaming.rs
threecrate-bench/: Cargo.toml  README.md
threecrate-bench/src/: lib.rs  mem.rs
threecrate-bench/src/mem/: allocation_size.rs  allocations.rs
threecrate-core/: Cargo.toml  README.md
threecrate-core/src/: bevy_interop.rs  error.rs  lib.rs  mesh.rs  organized_point_cloud.rs  point.rs  point_cloud.rs  traits.rs  transform.rs
threecrate-gpu/: Cargo.toml  README.md
threecrate-gpu/src/: device.rs  filtering.rs  icp.rs  lib.rs  mesh.rs  nearest_neighbor.rs  normals.rs  renderer.rs  segmentation.rs  tsdf.rs  utils.rs
threecrate-gpu/src/shaders/: mesh_flat.wgsl  mesh_pbr.wgsl  point_cloud.wgsl  point_cloud_instanced.wgsl  surface_extraction.wgsl  tsdf_integration.wgsl  tsdf_surface_extraction.wgsl
threecrate-io/: Cargo.toml  README.md
threecrate-io/benches/: mmap_benchmarks.rs
threecrate-io/src/: compression.rs  e57.rs  error.rs  lib.rs  lidar.rs  mesh_attributes.rs  mmap.rs  obj.rs  pasture.rs  pcd.rs  ply.rs  registry.rs  ros2.rs  rosbag.rs  serialization.rs  stl.rs  xyz_csv.rs
threecrate-io/src/tests/: mesh_serialization_tests.rs  mod.rs
threecrate-python/: Cargo.toml  README.md  pyproject.toml  threecrate.pyi
threecrate-python/src/: lib.rs
threecrate-reconstruction/: CHANGELOG.md  Cargo.toml  README.md
threecrate-reconstruction/src/: alpha_shape.rs  ball_pivoting.rs  delaunay.rs  lib.rs  marching_cubes.rs  moving_least_squares.rs  parallel.rs  pipeline.rs  poisson.rs
threecrate-reconstruction/tests/: integration_tests.rs
threecrate-simplification/: Cargo.toml  README.md
threecrate-simplification/benches/: quadric_error.rs  quadric_error_mem.rs  simplification_benchmarks.rs
threecrate-simplification/src/: clustering.rs  edge_collapse.rs  lib.rs  progressive.rs  quadric_error.rs
threecrate-umbrella/: Cargo.toml  README.md
threecrate-umbrella/src/: lib.rs
threecrate-visualization/: Cargo.toml  README.md
threecrate-visualization/src/: camera.rs  interactive_viewer.rs  lib.rs  renderer.rs  shaders.rs  viewer.rs
