[workspace]
resolver = "2"

members = [
    "threecrate-core",
    "threecrate-algorithms", 
    "threecrate-gpu",
    "threecrate-io",
    "threecrate-reconstruction",
    "threecrate-simplification",
    "threecrate-visualization",
    "examples"
]

exclude = [
    "threecrate-umbrella"
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["rajgandhi1"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rajgandhi1/threecrate.git"
homepage = "https://github.com/rajgandhi1/threecrate.git"
documentation = "https://docs.rs/threecrate-core"
description = "A comprehensive 3D point cloud processing library for Rust"
keywords = ["3d", "point-cloud", "graphics", "geometry", "visualization"]
categories = ["graphics", "mathematics", "science"]

[workspace.dependencies]
# Core dependencies
nalgebra = { version = "0.33", features = ["bytemuck"] }
glam = "0.24"
bytemuck = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
approx = "0.5"

# Algorithms
rayon = "1.10"
kdtree = "0.7"
kiddo = "4.2"
ndarray = "0.16"
itertools = "0.12"
rand = "0.8"

# Additional spatial data structures
rstar = "0.12"  # R*-tree for spatial indexing
spade = "2.13"   # Delaunay triangulation and Voronoi diagrams

# Surface reconstruction
poisson_reconstruction = "0.4"  # Poisson surface reconstruction

# GPU computing
wgpu = "0.20"
pollster = "0.4"

# I/O
obj = "0.10"
ply-rs = "0.1"
pasture-core = "0.4"
pasture-io = "0.4"

# Visualization
winit = "0.29"

# Development
criterion = { version = "0.7", features = ["html_reports"] }

clap = { version = "4.4", features = ["derive"] }
bpa_rs = "0.1.3"
