[package]
name = "threecrate-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Examples for threecrate"
publish = false

[features]
las_laz = []

[dependencies]
threecrate-core = { path = "../threecrate-core" }
threecrate-gpu = { path = "../threecrate-gpu" }
threecrate-io = { path = "../threecrate-io", features = ["las_laz"] }
threecrate-algorithms = { path = "../threecrate-algorithms" }
threecrate-visualization = { path = "../threecrate-visualization" }
anyhow = { workspace = true }
nalgebra = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
rand = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "gpu_example"
path = "gpu_example.rs"

[[bin]]
name = "comprehensive_gpu_example"
path = "comprehensive_gpu_example.rs"

[[bin]]
name = "interactive_viewer_example"
path = "interactive_viewer_example.rs"

[[bin]]
name = "normal_estimation_example"
path = "normal_estimation_example.rs"

[[bin]]
name = "ransac_plane_example"
path = "ransac_plane_example.rs"

[[bin]]
name = "k_nearest_neighbors_example"
path = "k_nearest_neighbors_example.rs"

[[bin]]
name = "statistical_outlier_benchmark"
path = "statistical_outlier_benchmark.rs"

[[bin]]
name = "gpu_filtering_example"
path = "gpu_filtering_example.rs" 

[[bin]]
name = "gpu_mesh_render_example"
path = "gpu_mesh_render_example.rs"

[[bin]]
name = "read_ply"
path = "read_ply.rs"

[[bin]]
name = "write_ply"
path = "write_ply.rs"

[[bin]]
name = "read_obj"
path = "read_obj.rs"

[[bin]]
name = "write_obj"
path = "write_obj.rs"

[[bin]]
name = "stream_read"
path = "stream_read.rs"

[[bin]]
name = "streaming_benchmark"
path = "streaming_benchmark.rs"

[[bin]]
name = "xyz_csv_example"
path = "xyz_csv_example.rs"

[[bin]]
name = "las_laz_example"
path = "las_laz_example.rs"

[[bin]]
name = "mesh_serialization_example"
path = "mesh_serialization_example.rs"