[package]
name = "threecrate-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Examples for threecrate"
publish = false

[features]
las_laz = []
io-mmap = ["threecrate-io/io-mmap"]
bevy_interop = ["dep:bevy", "threecrate-core/bevy_interop"]
e57 = ["threecrate-io/e57"]

[dependencies]
threecrate-core = { path = "../threecrate-core", version = "0.7.0" }
threecrate-gpu = { path = "../threecrate-gpu", version = "0.7.0" }
threecrate-io = { path = "../threecrate-io", version = "0.7.0", features = ["las_laz"] }
threecrate-algorithms = { path = "../threecrate-algorithms", version = "0.7.0" }
threecrate-reconstruction = { path = "../threecrate-reconstruction", version = "0.7.0" }
threecrate-visualization = { path = "../threecrate-visualization", version = "0.7.0" }
bevy = { version = "0.18", optional = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
rand = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "gpu_example"
path = "gpu_example.rs"

[[bin]]
name = "comprehensive_gpu_example"
path = "comprehensive_gpu_example.rs"

[[bin]]
name = "interactive_viewer_example"
path = "interactive_viewer_example.rs"
required-features = ["bevy_interop"]

[[bin]]
name = "normal_estimation_example"
path = "normal_estimation_example.rs"

[[bin]]
name = "ransac_plane_example"
path = "ransac_plane_example.rs"

[[bin]]
name = "k_nearest_neighbors_example"
path = "k_nearest_neighbors_example.rs"

[[bin]]
name = "statistical_outlier_benchmark"
path = "statistical_outlier_benchmark.rs"

[[bin]]
name = "gpu_filtering_example"
path = "gpu_filtering_example.rs" 

[[bin]]
name = "gpu_mesh_render_example"
path = "gpu_mesh_render_example.rs"
required-features = ["bevy_interop"]

[[bin]]
name = "read_ply"
path = "read_ply.rs"

[[bin]]
name = "write_ply"
path = "write_ply.rs"

[[bin]]
name = "read_obj"
path = "read_obj.rs"

[[bin]]
name = "write_obj"
path = "write_obj.rs"

[[bin]]
name = "stream_read"
path = "stream_read.rs"

[[bin]]
name = "streaming_benchmark"
path = "streaming_benchmark.rs"

[[bin]]
name = "xyz_csv_example"
path = "xyz_csv_example.rs"

[[bin]]
name = "las_laz_example"
path = "las_laz_example.rs"

[[bin]]
name = "mesh_serialization_example"
path = "mesh_serialization_example.rs"

[[bin]]
name = "mmap_example"
path = "mmap_example.rs"

[[bin]]
name = "test_marching_cubes"
path = "test_marching_cubes.rs"

[[bin]]
name = "bevy_mesh_conversion"
path = "bevy_mesh_conversion.rs"
required-features = ["bevy_interop"]

[[bin]]
name = "bevy_mesh_viewer"
path = "bevy_mesh_viewer.rs"
required-features = ["bevy_interop"]

[[bin]]
name = "bevy_conversion_demo"
path = "bevy_conversion_demo.rs"
required-features = ["bevy_interop"]

[[bin]]
name = "e57_io"
path = "e57_io.rs"
required-features = ["e57"]

[[bin]]
name = "euclidean_cluster_example"
path = "euclidean_cluster_example.rs"

[[bin]]
name = "mesh_boolean_example"
path = "mesh_boolean_example.rs"

[[bin]]
name = "mesh_smoothing_example"
path = "mesh_smoothing_example.rs"

[[bin]]
name = "point_cloud_colorization_example"
path = "point_cloud_colorization_example.rs"

[[bin]]
name = "simd_distance_example"
path = "simd_distance_example.rs"

[[bin]]
name = "streaming_pipeline"
path = "streaming_pipeline.rs"

[[bin]]
name = "pbr_visualization"
path = "pbr_visualization.rs"

[[bin]]
name = "realtime_pipeline"
path = "realtime_pipeline.rs"
