[package]
name = "threecrate-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core data structures and traits for threecrate"

[dependencies]
nalgebra = { workspace = true, features = ["serde-serialize", "rand", "mint"] }
glam = { workspace = true, features = ["mint", "rand"] }
serde = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
wgpu = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:wgpu"]

[target.'cfg(windows)'.dependencies]
wgpu = { version = "26.0.1", default-features = false, features = ["wgsl", "vulkan", "dx12"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "25.0.1", default-features = false, features = ["wgsl", "vulkan", "metal"], optional = true }

[dev-dependencies]
approx = { workspace = true } 