[package]
name = "threecrate-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "GPU-accelerated algorithms for threecrate using wgpu"

[dependencies]
threecrate-core = { path = "../threecrate-core", features = ["gpu"] }
wgpu = { workspace = true }
bytemuck = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
winit = { workspace = true }
futures-intrusive = "0.5"
flume = "0.11"

[dev-dependencies]
approx = { workspace = true }
pollster = "0.4"
rand = { workspace = true }
threecrate-algorithms = { path = "../threecrate-algorithms" }
tokio = { version = "1.0", features = ["full"] } 