[package]
name = "threecrate-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "I/O operations for point clouds and meshes in threecrate"

[dependencies]
threecrate-core = "0.3.1"
ply-rs = { workspace = true }
obj = { workspace = true }
pasture-core = { workspace = true }
pasture-io = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true } 