[package]
name = "threecrate-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "I/O operations for point clouds and meshes in threecrate"

[features]
default = []
las_laz = ["pasture-core", "pasture-io"]

[dependencies]
threecrate-core = { path = "../threecrate-core" }
ply-rs = { workspace = true }
obj = { workspace = true }
pasture-core = { workspace = true, optional = true }
pasture-io = { workspace = true, optional = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
byteorder = "1.5"
lazy_static = "1.4"

[dev-dependencies]
approx = { workspace = true } 