[package]
name = "threecrate-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "I/O operations for point clouds and meshes in threecrate"

[features]
default = []
las_laz = ["pasture-core", "pasture-io"]
io-mmap = ["memmap2"]

[dependencies]
threecrate-core = { path = "../threecrate-core", version = "0.5.0" }
ply-rs = { workspace = true }
obj = { workspace = true }
pasture-core = { workspace = true, optional = true }
pasture-io = { workspace = true, optional = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
byteorder = "1.5"
lazy_static = "1.4"
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "mmap_benchmarks"
harness = false 