[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "threecrate"
requires-python = ">=3.8"
description = "Python bindings for threecrate: a high-performance 3D point cloud and mesh processing library"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "threecrate"

