[package]
name = "threecrate-reconstruction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Surface reconstruction algorithms for threecrate"

[dependencies]
threecrate-core = "0.3.1"
threecrate-algorithms = { path = "../threecrate-algorithms" }
nalgebra = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
spade = { workspace = true }
poisson_reconstruction = { workspace = true }
rstar = { workspace = true }
kiddo = { workspace = true }
bpa_rs = { workspace = true }
glam = "0.28"

[dev-dependencies]
approx = { workspace = true } 