[package]
name = "threecrate-reconstruction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Surface reconstruction algorithms for threecrate"

[dependencies]
threecrate-core = { path = "../threecrate-core", version = "0.5.0" }
threecrate-algorithms = { path = "../threecrate-algorithms", version = "0.5.0" }
nalgebra = { workspace = true }
nalgebra_compat = { package = "nalgebra", version = "0.33" }
ndarray = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
spade = { workspace = true }
poisson_reconstruction = { workspace = true }
rstar = { workspace = true }
kiddo = { workspace = true }
bpa_rs = { workspace = true }
glam = "0.30"
num_cpus = "1.16"

[dev-dependencies]
approx = { workspace = true } 