[package]
name = "threecrate-simplification"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Mesh simplification and decimation algorithms for 3DCrate"

[dependencies]
threecrate-core = { path = "../threecrate-core" }
nalgebra = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
priority-queue = "2.1"

[dev-dependencies]
approx = { workspace = true } 