[package]
name = "threecrate-simplification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Mesh simplification and decimation algorithms for threecrate"

[dependencies]
threecrate-core = { path = "../threecrate-core", version = "0.5.0" }
nalgebra = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
priority-queue = "2.1"

[dev-dependencies]
approx = { workspace = true } 