[package]
name = "threecrate-simplification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Mesh simplification and decimation algorithms for threecrate"

[dependencies]
threecrate-core = { path = "../threecrate-core", version = "0.5.0" }
nalgebra = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
priority-queue = "2.1"

[dev-dependencies]
approx = { workspace = true } 
criterion.workspace = true
threecrate-bench = { path = "../threecrate-bench" }
threecrate-io = { path = "../threecrate-io" }

[[bench]]
name = "quadric_error"
harness = false

[[bench]]
name = "quadric_error_mem"
harness = false
approx = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "simplification_benchmarks"
harness = false
