[package]
name = "threecrate"
version = "0.4.0"
edition = "2021"
authors = ["rajgandhi1"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rajgandhi1/3DCrate.git"
homepage = "https://github.com/rajgandhi1/3DCrate.git"
documentation = "https://docs.rs/threecrate"
description = "A comprehensive 3D point cloud processing library for Rust - umbrella crate"
keywords = ["3d", "point-cloud", "graphics", "geometry", "visualization"]
categories = ["graphics", "mathematics", "science"]
readme = "README.md"

[features]
default = ["algorithms", "io", "simplification"]
algorithms = ["dep:threecrate-algorithms"]
gpu = ["dep:threecrate-gpu"]
io = ["dep:threecrate-io"]
io-mmap = ["threecrate-io/io-mmap"]
simplification = ["dep:threecrate-simplification"]
reconstruction = ["dep:threecrate-reconstruction"]
visualization = ["dep:threecrate-visualization"]
all = ["algorithms", "gpu", "io", "simplification", "reconstruction", "visualization"]

[dependencies]
# Core is always included
threecrate-core = { path = "../threecrate-core", version = "0.4.0" }

# Optional dependencies controlled by features
threecrate-algorithms = { path = "../threecrate-algorithms", version = "0.4.0", optional = true }
threecrate-gpu = { path = "../threecrate-gpu", version = "0.4.0", optional = true }
threecrate-io = { path = "../threecrate-io", version = "0.4.0", optional = true }
threecrate-simplification = { path = "../threecrate-simplification", version = "0.4.0", optional = true }
threecrate-reconstruction = { path = "../threecrate-reconstruction", version = "0.4.0", optional = true }
threecrate-visualization = { path = "../threecrate-visualization", version = "0.4.0", optional = true }

[dev-dependencies]
anyhow = "1.0" 