[package]
name = "threecrate-visualization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Visualization and rendering for threecrate point clouds and meshes"

[dependencies]
threecrate-core = { path = "../threecrate-core", version = "0.4.0", features = ["gpu"] }
threecrate-algorithms = { path = "../threecrate-algorithms", version = "0.4.0" }
threecrate-gpu = { path = "../threecrate-gpu", version = "0.4.0" }
threecrate-io = { path = "../threecrate-io", version = "0.4.0" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"
pollster = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
image = "0.24"
rfd = "0.14"  # Native file dialogs
instant = "0.1"

[target.'cfg(windows)'.dependencies]
wgpu = { version = "26.0", default-features = false, features = ["wgsl", "vulkan", "dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "26.0", default-features = false, features = ["wgsl", "vulkan", "metal"] }

[dev-dependencies]
pollster = "0.4" 